Fix for left side menu wrapping issues.

--- a/templates/default/style/stylesheet.css
+++ b/templates/default/style/stylesheet.css
@@ -72,6 +72,7 @@ input.liteoption {
 
 .navContainer li {
 	margin: 0 0 0 0;
+	white-space: nowrap;
 }
 
 .navContainer a {
@@ -166,6 +167,7 @@ input.liteoption {
 	color:#ffffff;
 	font-size:10px;
 	text-align:left;
+	/*white-space: nowrap;*/
 }
 
 .listHeader a:link {
